fix: So the bug was that overflow-y: auto did not work on Safari. The fix is to add -webkit-overflow-scrolling: touch

--- a/src/style/pages/_find-match.scss
+++ b/src/style/pages/_find-match.scss
@@ -230,6 +230,7 @@
       }
       &.show {
         overflow-y: auto;
+        -webkit-overflow-scrolling: touch; // For Safari because overflow-y: auto does not work.
       }
       .filters {
         position: absolute;
